# iecp-py

./: .gitignore  pyproject.toml
src/iecp_core/: __init__.py
src/iecp_core/api/: __init__.py  app.py  errors.py
src/iecp_core/artificer/: __init__.py  artificer_runtime.py  context_converter.py  dispatch_queue.py  openai_model_provider.py  output_filter.py  types.py
src/iecp_core/cli/: __init__.py
src/iecp_core/context/: __init__.py  context_builder.py  summarizer.py  token_estimator.py  types.py
src/iecp_core/conversations/: __init__.py  conversation_manager.py
src/iecp_core/cursors/: __init__.py  cursor_manager.py
tests/: api_helpers.py  test_api_artificers.py  test_api_auth.py  test_api_conversations.py  test_api_entities.py  test_api_events.py  test_api_lock.py  test_api_metrics.py  test_api_signals_decisions_handoffs.py  test_artificer_runtime.py  test_attention_signals.py  test_connection_manager.py  test_context_builder.py  test_context_converter.py  test_conversation_config.py  test_cursor.py  test_daemon_buffer.py  test_debounce.py  test_decision_manager.py  test_dispatch_queue.py  test_entity_lifecycle.py  test_error_recovery_e2e.py  test_event_factory.py  test_floor_lock.py  test_full_stack_e2e.py  test_gating.py  test_handoff_manager.py  test_mcp_server.py  test_metrics_collector.py  test_openai_model_provider.py  test_orchestrator.py  test_output_filter.py  test_rate_limiter.py  test_routing.py  test_send_command.py  test_simple_token_validator.py  test_stream_accumulator.py  test_summarizer.py  test_token_estimator.py  test_trace_logger.py  (+3 more)
(+67 files in other folders)
