[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iecp-core"
version = "0.1.0"
description = "IECP Core - Inter-Entity Communication Protocol foundation"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "python-ulid>=3.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iecp_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
